--- a/.gradient/workflows/workflow.yaml
+++ b/.gradient/workflows/workflow.yaml
@@ -12,7 +12,7 @@ jobs:
     uses: git-checkout@v1
     with:
       url: context.event.github.url
-  HelloWorld:
+  Experiment:
     resources:
       instance-type: C5
     needs:
@@ -21,5 +21,5 @@ jobs:
       repo: CloneRepo.outputs.repo
     uses: script@v1
     with:
-      script: python /inputs/repo/hello.py
+      script: python /inputs/repo/run_experiment.py
       image: tensorflow/tensorflow:1.14.0-py3
